@@ -848,6 +848,7 @@ public class QueryComponent extends SearchComponent
         }
         // now that we've added the shard info, let's only proceed if we have no error.
         if (srsp.getException() != null) {
+          partialResults = true;
           continue;
         }
 
